# ldaf-example

./: DataSource.py  README.md  Settings.py  main.py  pyproject.toml  requirements.txt
Modules/: Module_1.py  Module_2.py
ldaf_example/: DataSource.py  Settings.py  main.py
ldaf_example/Modules/: Module_1.py  Module_2.py
